# Full-text-search

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  config.xml
cmake/: CompileOptions.cmake
src/: CMakeLists.txt
src/indexer/: indexer.cpp  indexer.hpp
src/main_searcher/: main.cpp
src/parser/: parser.cpp  parser.hpp
src/searcher/: searcher.cpp  searcher.hpp
test/: CMakeLists.txt  test.cpp
